<resources>
    <string name="app_name">ImIn</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_checkin">Check In</string>
    <string name="event_label">Select an Event:</string>
    <string name="events_error_message">There was an error while loading the upcoming events. Please, try again later.</string>
    <string name="orgs_error_message">There was an error while loading organizations. Please, try again later.</string>
    <string name="label_location">Location:</string>
    <string name="label_starttime">Start Time:</string>
    <string name="label_endtime">End Time:</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Location is required to use this application.</string>
    <string name="ok">OK</string>
    <string name="label_event">Which event are you planning to attend?</string>
    <string name="toast_checkin">Checked in!</string>
    <string name="title_attendance">Attendance</string>
    <string name="attendance_error_message">There was an error while loading attendance information. Please, try again.</string>
    <string name="show_directions">Show In Map</string>
    <string name="checkin_label">Check In:</string>
    <string name="checkout_label">Check Out:</string>
    <string name="no_data">No Data</string>
    <string name="title_device_permission">Device Info Permission</string>
    <string name="text_device_permission">Device Information is required to use this application</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_sign_out">Sign Out</string>
    <string name="title_activity_attendance_detail">Attendance Detail</string>
    <string name="title_activity_attendance">Attendance Report</string>
    <string name="title_activity_checkin">Check In</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">No Upcoming Events</string>
    <string name="widget_title">Upcoming Events</string>
    <string name="timer_title">Timer</string>
    <string name="attendance_empty_message">No results found</string>
    <string name="events_empty_message">No events found</string>
    <string name="orgs_empty_message">No organizations found</string>
    <string name="desc_school_logo">Organization Logo</string>
    <string name="desc_checkin_status">Check In Status</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="required_label">Required</string>
    <string name="timer_done">Event Concluded!</string>
    <string name="checkedin_message">You are currently checked in %s. You will be checked out
        as soon as you leave %s. You may resume other activities but don\'t close ImIn until you are checked out.
    </string>
    <string name="org_logo_url">http://ingenuityapps.com/wp-content/uploads/imin/logos/%s.png</string>

    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="bio_sign_in">Biometric Sign in</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="bio_auth_done">Biometric Authentication successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="next">Next</string>
    <string name="desc_refresh">Refresh</string>
    <string name="desc_timer">Timer</string>
    <string name="title_welcome">Welcome to the ImIn app!</string>
    <string name="app_slogan">Easy. Secure. Accurate.</string>
    <string name="powered_by">Powered by</string>
    <string name="company_name">Ingenuity Applications</string>
    <string name="tosURL">http://ingenuityapps.com/imin-terms-conditions</string>
    <string name="ppURL">http://ingenuityapps.com/imin-privacy-policy</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="autocheckout_reminder_notification_title">Event Check-Out</string>
    <string name="autocheckout_reminder_notification_body">Based on your current location, you have been checked-out of the %s event at %s.</string>
    <string name="label_greeting">Hi, %s!</string>
    <string name="title_feedback">Feedback</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.ingenuityapps.android.therealimin</string>
    <string name="desc_close">Close</string>
    <string name="label_event_checkin">Ready to check-in?</string>
</resources>
