<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_checkin"
            android:icon="@drawable/ic_menu_checkin"
            android:title="@string/title_checkin" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_menu_attendance"
            android:title="@string/title_attendance" />
        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_sign_out"
            android:title="@string/title_feedback" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_sign_out"
            android:title="@string/title_sign_out" />
    </group>
</menu>