<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".OrganizationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/org_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/londrina_solid"
                android:gravity="center"
                android:text="@string/title_welcome"
                android:textColor="@color/inapp_notification"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/iv_app_logo"
                android:layout_width="210dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher_foreground" />



            <Spinner
                android:id="@+id/org_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:spinnerMode="dialog"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:elevation="8dp"
                android:text="@string/next"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_error_message_display"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="212dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/orgs_error_message"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_empty_message_display"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="212dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/orgs_empty_message"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>